# PicoBlog

./: .env.example  .gitignore  CLAUDE.md  README.md  README.ru.md  config.py  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  run.py  tailwind.config.js  test_render.py
app/: __init__.py  constants.py  forms.py  models.py  routes.py  utils.py
app/admin/: __init__.py  routes.py
app/admin/templates/admin/: dashboard.html  edit_user.html  posts.html  register_user.html  tags.html  users.html
app/services/: access_control.py
app/static/assets/: site.webmanifest
app/static/css/: input.css
app/static/fonts/: fonts.css
app/templates/: base.html  index.html  login.html  post.html  register.html  rss.xml
app/templates/admin/: change_password.html  create_edit_post.html  create_edit_tag.html  dashboard.html  edit_user.html  images.html  posts.html  register_user.html  tags.html  users.html
app/templates/macros/: components.html  icons.html
docs/: DEPLOYMENT.md  SETUP.md  requirements.md
docs/EN/: DEPLOYMENT.md  specifications.md
docs/RU/: DEPLOYMENT.md  specifications.md
migrations/versions/: 42e94ba164bb_make_email_nullable.py  5ff44ef94951_add_is_master_to_tag_model.py  7bfb6721a44a_add_comments_enabled_field_to_post_model.py  b8588fe609f8_add_is_draft_field_to_post_model.py  c9d2a7f3e5b1_add_rendered_body_cache_fields.py  e06c5c873070_initial_migration.py
tests/: test_access_control.py  test_features.py
utils/: test_render.py
